# Mips64

./: .gitignore  CMakeLists.txt
docs/: explicacion.txt
ejemplos/: pr6-ej8.s
src/: main.cpp  mytypes.h  simulator.cpp  simulator.h  utils.cpp
src/Assembler/: assembler.cpp  assembler.h  language.cpp  language.h
src/CPU/: CPUConfig.cpp  CPUConfig.h  CPUStats.cpp  CPUStats.h  PipelineHistory.cpp  PipelineHistory.h  Processor.cpp  Processor.h  pipeline.cpp  pipeline.h
src/IO/: IO.cpp  IO.h  Screen.cpp  Screen.h  Terminal.cpp  Terminal.h
src/Memory/: CodeMemory.cpp  CodeMemory.h  DataMemory.cpp  DataMemory.h  MemoryRegion.cpp  MemoryRegion.h  NullRegion.cpp  NullRegion.h  Region.h
